Added drawing capabilities.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 	<link href="css/leaflet.css" rel="stylesheet">
+	<link href="css/leaflet.draw.css" rel="stylesheet">
 	<!--[if lte IE 8]>
 		<link rel="stylesheet" href="../dist/leaflet.ie.css" />
 	<![endif]-->
@@ -36,6 +37,8 @@
 	<link href="css/application.css" rel="stylesheet">
 	
 	<script src="js/leaflet-src.js"></script>
+	<script src="js/leaflet.draw.js"></script>
+        <script src="js/geojson.js"></script>
 
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
