Hooked up weighted overlay sliders

--- a/static/index.html
+++ b/static/index.html
@@ -39,6 +39,7 @@
 	<script src="js/leaflet-src.js"></script>
 	<script src="js/leaflet.draw.js"></script>
         <script src="js/geojson.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
@@ -144,5 +145,13 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/application.js"></script>
 
+    <div id="parameterSlider" style="display:none">
+      <div class="well">
+        <h4 class="slider-label">Parameter 1</h4>
+        <span class="weight">
+        </span>
+        <div class="slider"></div>
+      </div>
+    </div>
   </body>
 </html>
