Summary update, use config file

--- a/static/index.html
+++ b/static/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <div id="summaryTemplate" style="display:none">
-      <p>Total Score for Region: <span id="summary-score"></span></p>
+      <p><span id="summary-label">Total Score for Region:</span> <span id="summary-score"></span></p>
     </div>
 
     <li id="colorRampTemplate" role="presentation" style="display:none">
