Fixed alignment on legend

--- a/static/index.html
+++ b/static/index.html
@@ -98,7 +98,16 @@
 	<div class="well pull-left">
           <table>
 	    <tbody class="legend">
-              <tr><td><strong>Legend<strong></td><td><img id="activeRamp"></img></td></tr>
+              <tr>
+				<td><strong>Legend<strong></td>
+			  </tr>
+			  <tr>
+				<td><img id="activeRamp" style="text-align: middle;"></img></td>
+			  </tr>
+			  <tr>
+				<td>High</td>
+				<td style="position: absolute; margin-left: -28px;">Low</td>
+			  </tr>
             </tbody>
           </table>
 	</div>
