Minor styling edits

--- a/static/index.html
+++ b/static/index.html
@@ -112,7 +112,7 @@
           </table>
 	</div>
           <div class="options">
-            <ul id="colorChooser" class="nav nav-pills">
+            <ul id="colorChooser" class="nav">
               <li class="dropdown">
                 <a class="btn dropdown-toggle" id="drop5" role="button" data-toggle="dropdown" href="#">
                   Color Ramps <i class="icon-chevron-down"></i>
