Added new content to the about popup

--- a/static/index.html
+++ b/static/index.html
@@ -212,9 +212,20 @@
         <h3 id="myModalLabel">Chattannoga Agricultural & Forestry Model</h3>
       </div>
       <div class="modal-body">
-        <p>This demo displays how GeoTrellis can be used to perform a dynamic weighted overlay of various
-           raster layers. It also demonstrates zonal summaries of drawn areas.</p>
-        <p>Developed at <a href="http://www.azavea.com" target="_blank">Azavea</a>.</p>
+        <p>This project is a joint effort of the University of Tennessee at Chattanooga and Azavea, with funding from the Lyndhurst Foundation.</p>
+		  <p>The Center for Academic and Innovative Technologies at the University of Tennessee at Chattanooga (CAIT) (UTC), was funded to develop a geospatial data library and planning applications to support long term regional planning efforts. Original project was named the "Regional Resource Inventory". This decision support system and current demo application are being developed in collaboration with a long term regional planning effort for the Greater Chattanooga area (<a href="http://thrive2055.com/" target="_blank">http://thrive2055.com</a>).</p>
+        <p>This is a demo application. In the coming months, we hope to build out the application to include additional models, contextual data layers, and reporting functionality.</p>
+		  <p>UTC will continue to serve as a regional clearinghouse for geospatial data, modeled scenarios, and decision support tools after the 3 year regional planning effort is completed.</p>
+		  <p>For more information on the UTC project contact:<br><br>
+		  Andy Carrol<br>
+		  GIS Manager<br>
+		  Center for Academix and Innovative Technologies<br><br>
+		  University of Tennessee at Chattanooga<br>
+		  615 McCallie Avenue<br>
+		  Chattanooga, TN 37403-2598 <br><br>
+		  Office: (423) 425-5389<br>
+		  Email: <a href="mailto:andrew-carroll@utc.edu">andrew-carroll@utc.edu</a>
+		  </p>
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
