Fixed typos in "About" text in index.html

--- a/static/index.html
+++ b/static/index.html
@@ -208,9 +208,9 @@
         <p>This is a demo application. In the coming months, we hope to build out the application to include additional models, contextual data layers, and reporting functionality.</p>
 		  <p>UTC will continue to serve as a regional clearinghouse for geospatial data, modeled scenarios, and decision support tools after the 3 year regional planning effort is completed.</p>
 		  <p>For more information on the UTC project contact:<br><br>
-		  Andy Carrol<br>
+		  Andy Carroll<br>
 		  GIS Manager<br>
-		  Center for Academix and Innovative Technologies<br><br>
+		  Center for Academic and Innovative Technologies<br><br>
 		  University of Tennessee at Chattanooga<br>
 		  615 McCallie Avenue<br>
 		  Chattanooga, TN 37403-2598 <br><br>
