--- a/static/index.html
+++ b/static/index.html
@@ -200,7 +200,7 @@
     <!-- Modal -->
     <div id="aboutModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
-        <h3 id="myModalLabel">Chattannoga Agricultural & Forestry Model</h3>
+        <h3 id="myModalLabel">Chattanooga Agricultural & Forestry Model</h3>
       </div>
       <div class="modal-body">
         <p>This project is a joint effort of the University of Tennessee at Chattanooga and Azavea, with funding from the Lyndhurst Foundation.</p>
