--- a/service/static/index.html
+++ b/service/static/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="GeoTrellis features demo.">
     <meta name="author" content="Azavea">
 
-	 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
@@ -46,7 +46,7 @@
     <script src="js/leaflet-src.js"></script>
     <script src="js/leaflet.draw.js"></script>
     <script src="js/geojson.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery-ui-1.10.0.min.js"></script>
